operator/config/policies/workspace_quota.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: workspace-quota
spec:
  validationFailureAction: Enforce
  rules:
    - name: quota
      match:
        any:
        - resources:
            kinds:
            - Workspace
            namespaces:
            - workspaces-system
            operations:
            - CREATE
      context:
      - name: ownedWorkspaces
        apiCall:
          urlPath: "/apis/workspaces.io/v1alpha1/namespaces/workspaces-system/workspaces?labelSelector=workspaces.io/owner={{ request.object.spec.owner.id }}"
          jmesPath: "items | length(@)"
      - name: workspacesLimit
        variable:
          value: 1
      validate:
        message: "Maximum number of workspaces ({{ workspacesLimit }}) reached for {{ request.object.spec.owner.id }}"
        deny:
          conditions:
            all:
            - key: "{{ ownedWorkspaces }}"
              operator: GreaterThan
              value: "{{ sum([workspacesLimit, `-1`]) }}"
    - name: owner-change
      match:
        any:
        - resources:
            kinds:
            - Workspace
            namespaces:
            - workspaces-system
            operations:
            - UPDATE
      context:
      - name: ownedWorkspaces
        apiCall:
          urlPath: "/apis/workspaces.io/v1alpha1/namespaces/workspaces-system/workspaces?labelSelector=workspaces.io/owner={{ request.object.spec.owner.id }}"
          jmesPath: "items | length(@)"
      - name: workspacesLimit
        variable:
          value: 1
      validate:
        message: "Maximum number of workspaces ({{ workspacesLimit }}) reached for {{ request.object.spec.owner.id }}"
        deny:
          conditions:
            all:
            - key: "{{ ownedWorkspaces }}"
              operator: GreaterThan
              value: "{{ sum([workspacesLimit, `-1`]) }}"
            - key: "{{ request.oldObject.spec.owner.id }}"
              operator: NotEquals
              value: "{{ request.object.spec.owner.id }}"
